@@ -28,7 +28,8 @@ Emulator:
   - Either single or double quotes can be used to mark expressions
     (above two features make temporary debug output easier within Hatari)
   - output what value was set by options if it's not otherwise shown by UI
-  - Show AES call arguments (for intin array) in traces
+  - Show function arguments (for values in intin and strings in addrin arrays)
+    in AES traces
 - Fileselector : remember previous position, handle large directory better
 
 Other changes:
